// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPinnableListGroup can have custom pin icon titles 1`] = `
<ul
  aria-label="aria-label"
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault ouiPinnableListGroup testClass1 testClass2"
  data-test-subj="test subject string"
>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <span
      class="ouiListGroupItem__text"
    >
      <span
        class="ouiListGroupItem__icon"
        color="inherit"
        data-ouiicon-type="stop"
      />
      <span
        class="ouiListGroupItem__label"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
    <button
      aria-label="Pin Label with iconType to the top"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiPinnableListGroup__itemExtraAction"
      title="Pin Label with iconType to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <span
      class="ouiListGroupItem__text"
    >
      <span
        class="ouiListGroupItem__label"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiListGroupItem__extraAction-alwaysShow"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isActive ouiListGroupItem-isClickable ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Active link"
      >
        Active link
      </span>
    </a>
    <button
      aria-label="Pin Active link to the top"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiPinnableListGroup__itemExtraAction"
      title="Pin Active link to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <button
      class="ouiListGroupItem__button"
      type="button"
    >
      <span
        class="ouiListGroupItem__label"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
    <button
      aria-label="Unpin Button with onClick to the top"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiListGroupItem__extraAction-alwaysShow ouiPinnableListGroup__itemExtraAction ouiPinnableListGroup__itemExtraAction-pinned"
      title="Unpin Button with onClick to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
    <button
      aria-label="Pin Link with href to the top"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiPinnableListGroup__itemExtraAction"
      title="Pin Link with href to the top"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable ouiPinnableListGroup__item"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Not pinnable"
      >
        Not pinnable
      </span>
    </a>
  </li>
</ul>
`;

exports[`OuiPinnableListGroup is rendered 1`] = `
<ul
  aria-label="aria-label"
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault ouiPinnableListGroup testClass1 testClass2"
  data-test-subj="test subject string"
>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <span
      class="ouiListGroupItem__text"
    >
      <span
        class="ouiListGroupItem__icon"
        color="inherit"
        data-ouiicon-type="stop"
      />
      <span
        class="ouiListGroupItem__label"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
    <button
      aria-label="Pin item"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiPinnableListGroup__itemExtraAction"
      title="Pin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <span
      class="ouiListGroupItem__text"
    >
      <span
        class="ouiListGroupItem__label"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiListGroupItem__extraAction-alwaysShow"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isActive ouiListGroupItem-isClickable ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Active link"
      >
        Active link
      </span>
    </a>
    <button
      aria-label="Pin item"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiPinnableListGroup__itemExtraAction"
      title="Pin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <button
      class="ouiListGroupItem__button"
      type="button"
    >
      <span
        class="ouiListGroupItem__label"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
    <button
      aria-label="Unpin item"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiListGroupItem__extraAction-alwaysShow ouiPinnableListGroup__itemExtraAction ouiPinnableListGroup__itemExtraAction-pinned"
      title="Unpin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable ouiListGroupItem-hasExtraAction ouiPinnableListGroup__item"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
    <button
      aria-label="Pin item"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiPinnableListGroup__itemExtraAction"
      title="Pin item"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="pinFilled"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable ouiPinnableListGroup__item"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Not pinnable"
      >
        Not pinnable
      </span>
    </a>
  </li>
</ul>
`;
